<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="3">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Titulo"
                android:theme="@style/TextViewTitle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:id="@+id/tvClasification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clasification"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvDesignation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvAverageHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_height"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvSkinColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skin_color"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvHairColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_colors"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvEyeColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eye_colors"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvAverageLifespan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_lifespan"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>