<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.github.florent37.arclayout.ArcLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:arc_cropDirection="cropOutside"
            android:layout_weight="1">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/imView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"/>

        </com.github.florent37.arclayout.ArcLayout>
    </LinearLayout>
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="3">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Titulo"
                android:theme="@style/TextViewTitle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:theme="@style/TextViewTitleII"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mass"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvHairColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hair_color"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvSkinClor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skin_color"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvEyeColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eye_color"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvBirthdayYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_year"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>