<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="3">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Titulo"
                android:theme="@style/TextViewTitle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:id="@+id/tvModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:theme="@style/TextViewTitleII"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvManufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvCostInCredits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_in_credits"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="length"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvMaxAtmosphering_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_atmosphering_speed"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvCrew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="crew"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvPassengers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="passengers"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvCargoCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cargo_capacity"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/tvConsumables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="consumables"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/tvHyperdriveRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hyperdrive_rating"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/tvMGLT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mglt"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/tvStarshipClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starship_class"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>