<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.github.florent37.arclayout.ArcLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:arc_cropDirection="cropOutside"
            android:layout_weight="1">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/imView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"/>

        </com.github.florent37.arclayout.ArcLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="2">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Titulo"
                android:theme="@style/TextViewTitle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:theme="@style/TextViewTitleII"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/producer"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/releaseDate"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opening"
                    android:theme="@style/TextViewTitleII"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/tvOpening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextViewMain"
                    android:layout_margin="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clProgressBarFilm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/blueProgressBar"
        android:visibility="gone">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/ivProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="visible"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>