<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/film"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivFilm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/films"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/people"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivPeople"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/people"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/planet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivPlanet"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/planet"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/specie"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivSpecie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/specie"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/starship"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivStarship"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/starship"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/vehicle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:orientation="vertical">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ivVehicle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/vehicle"
                android:gravity="center"
                android:theme="@style/TextViewMain"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>